<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity"
    android:background="@drawable/menu_activity_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp">


        <TextView
            android:id="@+id/hello_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textSize="24dp"
            style="@style/AppFont"
            android:text="@string/hello_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/game_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/game_btn"
            android:background="@drawable/button_shape_design"
            android:layout_marginRight="10dp"
            />

        <Button
            android:layout_marginLeft="10dp"
            android:id="@+id/guide_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/guide_btn"
            android:background="@drawable/button_shape_design"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.example.simonsays.FlyingSimon
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_centerInParent="true" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:scaleType="fitEnd">

        <ImageButton
            android:id="@+id/settings_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:background="@null"
            android:scaleType="fitEnd"
            android:src="@drawable/settings_btn_icon"/>

        <ImageButton
            android:id="@+id/english_btn"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0"
            android:background="@null"
            android:src="@drawable/en"
            android:visibility="invisible"
            android:scaleType="fitCenter"
            />

        <ImageButton
            android:id="@+id/hebrew_btn"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/iw"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/leaderboard_btn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0"
            android:background="@null"
            android:src="@drawable/leaderboard_icon"
            android:visibility="invisible"
            android:scaleType="fitCenter"/>


        <ImageButton
            android:id="@+id/sound_btn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0"
            android:background="@null"
            android:src="@drawable/sound_on_icon"
            android:visibility="invisible"
            android:scaleType="fitCenter"/>


        <ImageButton
            android:id="@+id/music_btn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/music_on_icon"
            android:visibility="invisible" />

    </LinearLayout>


</LinearLayout>



